--- a/AppGestorVentas/Views/ProductoVierws/AdministracionProductosView.xaml
+++ b/AppGestorVentas/Views/ProductoVierws/AdministracionProductosView.xaml
@@ -73,9 +73,9 @@
                                                 WidthRequest="70"
                                                 HeightRequest="70"
                                                 Aspect="AspectFill"
-                                                Source="{Binding aImagenes[0].sURLImagen}" />
+                                                Source="{Binding ImagenPrincipalUrl}" />
                                             <!-- Descripción (primer variante) -->
-                                            <Label  Text="{Binding aVariantes[0].sVariante}"
+                                            <Label  Text="{Binding DescripcionPrincipal, TargetNullValue='(Sin descripción)'}"
                                                 Grid.Column="2"
                                                 TextColor="Black"
                                                 LineBreakMode="TailTruncation"
@@ -190,9 +190,9 @@
                                                 WidthRequest="70"
                                                 HeightRequest="70"
                                                 Aspect="AspectFill"
-                                                Source="{Binding aImagenes[0].sURLImagen}" />
+                                                Source="{Binding ImagenPrincipalUrl}" />
                                             <!-- Descripción (primer variante) -->
-                                            <Label Text="{Binding aVariantes[0].sVariante}"
+                                            <Label Text="{Binding DescripcionPrincipal, TargetNullValue='(Sin descripción)'}"
                                                 Grid.Column="2"
                                                 TextColor="Black"
                                                 LineBreakMode="TailTruncation"
@@ -313,7 +313,7 @@
                                                     WidthRequest="70"
                                                     HeightRequest="70"
                                                     Aspect="AspectFill"
-                                                    Source="{Binding aImagenes[0].sURLImagen}" />
+                                                    Source="{Binding ImagenPrincipalUrl}" />
                                             <!-- Descripción (primer variante) -->
                                             <!--<Label Text="{Binding aVariantes[0].sVariante}"
                                                     Grid.Column="2"
@@ -458,7 +458,7 @@
                                                             <Label Text="{Binding sNombre}" FontAttributes="Bold" Padding="5"/>
                                                         </StackLayout>
                                                         <StackLayout Spacing="0" HorizontalOptions="Center">
-                                                            <Image Source="{Binding aImagenes[0].sURLImagen}"
+                                                            <Image Source="{Binding ImagenPrincipalUrl}"
                                                                     WidthRequest="70"
                                                                     HeightRequest="70"
                                                                     Aspect="AspectFill"/>
@@ -469,7 +469,7 @@
                                                                     BackgroundColor="{StaticResource Secondary}"
                                                                     TextColor="White"
                                                                     Padding="5"/>
-                                                            <Label Text="{Binding aVariantes[0].sVariante}" Padding="5"/>
+                                                            <Label Text="{Binding DescripcionPrincipal, TargetNullValue='(Sin descripción)'}" Padding="5"/>
                                                         </StackLayout>
                                                         <StackLayout Spacing="5" Orientation="Horizontal">
                                                             <StackLayout Spacing="2" HorizontalOptions="FillAndExpand">
@@ -554,7 +554,7 @@
                                                             <Label Text="{Binding sNombre}" FontAttributes="Bold" Padding="5"/>
                                                         </StackLayout>
                                                         <StackLayout Spacing="0" HorizontalOptions="Center">
-                                                            <Image Source="{Binding aImagenes[0].sURLImagen}"
+                                                            <Image Source="{Binding ImagenPrincipalUrl}"
                                                                     WidthRequest="70"
                                                                     HeightRequest="70"
                                                                     Aspect="AspectFill"/>
@@ -565,7 +565,7 @@
                                                                     BackgroundColor="{StaticResource Secondary}"
                                                                     TextColor="White"
                                                                     Padding="5"/>
-                                                            <Label Text="{Binding aVariantes[0].sVariante}" Padding="5"/>
+                                                            <Label Text="{Binding DescripcionPrincipal, TargetNullValue='(Sin descripción)'}" Padding="5"/>
                                                         </StackLayout>
                                                         <StackLayout Spacing="5" Orientation="Horizontal">
                                                             <StackLayout Spacing="2" HorizontalOptions="FillAndExpand">
@@ -650,7 +650,7 @@
                                                             <Label Text="{Binding sNombre}" FontAttributes="Bold" Padding="5"/>
                                                         </StackLayout>
                                                         <StackLayout Spacing="0" HorizontalOptions="Center">
-                                                            <Image Source="{Binding aImagenes[0].sURLImagen}"
+                                                            <Image Source="{Binding ImagenPrincipalUrl}"
                                                                     WidthRequest="70"
                                                                     HeightRequest="70"
                                                                     Aspect="AspectFill"/>
